TestSuite/PascalABCTests/errors/err0423.pas
//!Ожидался порядковый или строковый тип
function f(i: integer): integer;
begin
  
end;

begin
  case f of
    1: writeln(2);
  end;
end.